Mudança na forma de obtenção do ID do livro nas rotas de empréstimo e devolução. Antes era obtido pelo parâmetro, e agora é obtido através do corpo da requisição
